# Backend_Intern_Course_Assessments

./: .gitignore  README.md
app/api/routers/: tasks.py
app/exceptions/: exception_handlers.py
docker-grpc/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker-grpc/alembic/versions/: 32555933a1bd_using_postgres_as_the_main_database.py
docker-grpc/app/: grpc_server.py  main.py  worker.py
docker-grpc/app/models/: user_model.py
docker-grpc/app/repositories/: project_repo.py
docker-grpc/app/resolvers/: queries.py
docker-grpc/app/schema/: type_defs.py
docker-grpc/app/services/: task_service.py
docker-grpc/proto/: user_lookup_pb2.py  user_lookup_pb2_grpc.py
final-project/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
final-project/alembic/: env.py
final-project/alembic/versions/: bd921127d778_initial_tables.py
final-project/app/: grpc_client.py  grpc_server.py  main.py  worker.py
final-project/app/core/: config.py
final-project/app/db/: database.py  mongo.py  redis.py  security.py
final-project/app/models/: __init__.py  activity_log_model.py  membership_model.py  project_model.py  task_model.py  user_model.py
final-project/app/repositories/: activity_log_repo.py  project_repo.py  task_repo.py  user_repo.py
final-project/app/resolvers/: mutations.py  queries.py
final-project/app/routes/: auth.py  health.py
final-project/app/schema/: context.py  schema.graphql  type_defs.py
final-project/app/services/: auth_service.py  project_service.py  task_service.py  user_service.py
final-project/proto/: user_lookup.proto  user_lookup_pb2.py  user_lookup_pb2_grpc.py
final-project/tests/: conftest.py  test_auth.py  test_graphql.py  test_health.py  test_ownership.py  test_redis_cache.py
graphql/: README.md  pyproject.toml
graphql/alembic/: env.py
graphql/alembic/versions/: 45d8bf5d21c4_mounted_graphql.py  60dfd813f363_add_project_id_to_activity_log_make_.py  8a74b52e25b9_add_activity_log.py  a2aa71bb3717_added_listing.py  a3eacad5f895_updated_tasks.py  dde782493267_updated_logs_and_filtering_with_admin_.py  defdbbda1ad4_add_project_id_to_activity_log_make_.py
graphql/app/: main.py
graphql/app/db/: security.py
graphql/app/models/: activity_log_model.py  task_model.py  user_model.py
graphql/app/repositories/: project_repo.py
graphql/app/resolvers/: mutations.py  queries.py
graphql/app/schema/: context.py  schema.graphql  schema.py
graphql/app/services/: project_service.py  task_service.py  user_service.py
health-center-fastapi/: pyproject.toml  requirements.txt
health-center-fastapi/app/: main.py
health-center-fastapi/app/api/routers/: project.py  users.py
health-center-fastapi/app/core/: config.py
health-center-fastapi/app/middleware/: middleware_1.py
week2_fastapi/: Scripts'_Description.md
week3_postgres-alembic-databases/: requirements.txt
week4_Django/MyProject/: README.md  requirements.txt
week4_Django/MyProject/MyProject/: settings.py  urls.py
week4_Django/MyProject/authorization/: admin.py  models.py  serializers.py  urls.py  views.py
week4_Django/MyProject/authorization/migrations/: 0001_initial.py  0002_rename_todo_authorization.py  0003_rename_title_authorization_firstname_and_more.py  0004_authorization_phone.py
week4_Django/MyProject/authorization/templates/authorization/: index.html
week4_Django_FastAPI/: Comparision.md  Info.md
week4_Django_FastAPI/FastAPI_Project/: .env  .gitignore  README.md  alembic.ini  pyproject.toml  structure.md
week4_Django_FastAPI/FastAPI_Project/alembic/: env.py
week4_Django_FastAPI/FastAPI_Project/alembic/versions/: 5ff8e09e4713_added_ownership.py  64219fab6aee_added_admin_and_ownerships.py  733f0b0d2031_add_password_and_role_to_users.py  8a91202ab5eb_add_password_role_to_users.py
week4_Django_FastAPI/FastAPI_Project/app/: main.py
week4_Django_FastAPI/FastAPI_Project/app/api/routes/: auth.py  health.py  project.py  task.py  user.py
week4_Django_FastAPI/FastAPI_Project/app/core/: config.py  security.py
week4_Django_FastAPI/FastAPI_Project/app/dependencies/: auth_dependency.py
week4_Django_FastAPI/FastAPI_Project/app/models/: user_model.py
week4_Django_FastAPI/FastAPI_Project/app/repositories/: project_repo.py  task_repo.py  user_repo.py
week4_Django_FastAPI/FastAPI_Project/app/schemas/: task_schema.py  user_schema.py
week4_Django_FastAPI/FastAPI_Project/app/services/: auth_service.py  project_service.py  task_service.py  user_service.py
week4_Django_FastAPI/MyProject/: .gitignore  Database-1  README.md
week4_Django_FastAPI/MyProject/MyProject/: urls.py
week4_Django_FastAPI/MyProject/authorization/: admin.py  views.py
week4_Django_FastAPI/MyProject/authorization/migrations/: 0001_initial.py
week4_Django_FastAPI/MyProject/authorization/templates/authorization/: add.html  (+1 more)
week6_redis/: README.md  pyproject.toml
week6_redis/app/: main.py  worker.py
week6_redis/app/db/: redis.py
week6_redis/app/models/: __init__.py  membership_model.py  project_model.py
week6_redis/app/resolvers/: mutations.py  queries.py
week6_redis/app/schema/: context.py  schema.graphql
week6_redis/app/services/: project_service.py
week6_redis/infra/: docker-compose.redis.yml
