[project]
name = "final-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Pratham Adhikari",email = "adjikaripratham44@gmail.com"}
]
requires-python = ">=3.14,<4"
dependencies = [
    "fastapi (>=0.138.1,<0.139.0)",
    "ariadne (>=1.1.0,<2.0.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "bcrypt (==4.0.1)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "email-validator (>=2.3.0,<3.0.0)",
    "graphql-core (==3.2.6)",
    "redis (<6)",
    "hiredis (>=3.4.0,<4.0.0)",
    "arq (>=0.28.0,<0.29.0)",
    "motor (>=3.7.1,<4.0.0)",
    "pymongo (>=4.17.0,<5.0.0)",
    "grpcio (>=1.81.1,<2.0.0)",
    "grpcio-tools (>=1.81.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "ruff (>=0.15.20,<0.16.0)",
    "black (>=26.5.1,<27.0.0)",
    "mypy (>=2.1.0,<3.0.0)"
]



[tool.black]
line-length = 100
target-version = ["py314"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
disallow_untyped_defs = false
no_implicit_optional = false
exclude = ["proto/.*_pb2.*", "app/grpc_client.py", "app/grpc_server.py"]
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.coverage.run]
source = ["app"]
omit = ["app/grpc_server.py", "app/grpc_client.py"]


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"