[project]
name = "week2-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Pratham Adhikari",email = "pratham.adhikari@codavatar.tech"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "starlette (>=1.2.0,<2.0.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
