[project]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Pratham Adhikari",email = "adjikaripratham44@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.137.1,<0.138.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "email-validator (>=2.3.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "bcrypt (==4.0.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
